--- a/labor03/labor03_feladat06/labor03_feladat06.vcxproj.filters
+++ b/labor03/labor03_feladat06/labor03_feladat06.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="labor03_feladat01.c">
+    <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
